--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -10,30 +10,21 @@
 
 <div>
     <h2> Add a Pet to this Application </h2>
-    <%= form_with url: "/applications/#{@application.id}", method: :get, local: true do |form|%>
+    <%= form_with url: "/applications", method: :get, local: true do |form|%>
         <div>
-            <%= form.label :name, "Search"%>
-            <%= form.text_field :name %>
+            <%= form.label :search, "Search"%>
+            <%= form.text_field :search %>
+            <%= form.hidden_field :application_id, value: @application.id %>
             <%= form.submit "Submit"%>
         </div>
     <% end %>
 </div>
 
-<div>
-    <h2>results</h2>
-    <%= @pets.each do |pet| %>
-        <p>pet.name</p>
-        <%= form_with url: "/pet_applications/add_pet", method: :post, local: true do%>
-            <%= hidden_field_tag :application_id, @application.id %>
-            <%= hidden_field_tag :pet_id, pet.id %>
-            <%= submit_tag "Add Pet" %>
-        <% end %>
-    <% end %>
-</div>
+
 
 <div>
     <h2> Desired Pets</h2>
-        <% @application.pets.each do |pet| %>
+        <% @pets.each do |pet| %>
             <p> Click to view: <%= link_to pet.name, "/pets/#{pet.id}"%></p>
         <% end %>
 </div>
