--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -5,28 +5,40 @@
     <h2> Application Details </h2>
             <p> Name: <%= @application.applicant_name %></p>
             <p> Address: <%= @application.full_address %></p>   
-            <p> Description: <%= @application.description %></p>  
+            <p> Description: <%= @application.description %></p> 
+            <p> Pets: <% @pets.each do |pet| %> <%= pet.name %><% end %></p>
 </div>
 
 <div>
+    <% if @application.status == "In Progress" %>   
     <h2> Add a Pet to this Application </h2>
-    <%= form_with url: "/applications", method: :get, local: true do |form|%>
-        <div>
-            <%= form.label :search, "Search"%>
-            <%= form.text_field :search %>
-            <%= form.hidden_field :application_id, value: @application.id %>
-            <%= form.submit "Submit"%>
-        </div>
+        <%= form_with url: "/applications", method: :get, local: true do |form|%>
+            <div>
+                <%= form.label :search, "Search"%>
+                <%= form.text_field :search %>
+                <%= form.hidden_field :application_id, value: @application.id %>
+                <%= form.submit "Submit"%>
+            </div>
+        <% end %>
     <% end %>
 </div>
 
 
 
 <div>
+    <% if @application.status == "In Progress" %>
     <h2> Desired Pets</h2>
         <% @pets.each do |pet| %>
             <p> Click to view: <%= link_to pet.name, "/pets/#{pet.id}"%></p>
         <% end %>
-</div>
 
+        <%= form_with url: "/applications/#{@application.id}", method: :patch, local: true do |form| %>
+            <div>
+                <%= form.label :description, "Why I would make a good owner for these pets?"%>
+                <%= form.text_area :description %>
+            </div>
+            <%= form.submit "Submit Application"%>
+        <% end %>
+    <% end %>
+</div>
 
