modified: some stuff lol

--- a/app/views/admin_shelters/index.html.erb
+++ b/app/views/admin_shelters/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Admin - Shelters</h1>
 
 <div>
-    <% @shelters.each do |shelter| %>
-    <%= shelter.name %>
+    <% @shelters.reverse_alphabetical_order.each do |shelter| %>
+    <p><%= shelter %></p>
     <% end %>
 </div>
