updated: model tests, added: flash[:error] for no matching pet in PetApplicationsController and view. User stories 10 and 11 complete.

--- a/app/views/admin_shelters/index.html.erb
+++ b/app/views/admin_shelters/index.html.erb
@@ -5,3 +5,10 @@
     <p><%= shelter %></p>
     <% end %>
 </div>
+
+<div>
+    <h3>Shelters with Pending Applications</h3>
+    <% @shelter_applications.each do |shelter| %>
+        <p><%= shelter.name %></p>
+    <% end %>
+</div>
