--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Results</h1>
 
-    <h2>results</h2>
     <% @pets.each do |pet| %>
         <p><%=pet.name%></p>
         <%= form_with url: "/pet_applications/add_pet", method: :post, local: true do%>
@@ -8,4 +7,9 @@
             <%= hidden_field_tag :pet_id, pet.id %>
             <%= submit_tag "Add Pet" %>
         <% end %>
+    <% end %>
+
+    <% if flash[:error]%>
+        <p style = "color: red;"><%= flash[:error] %> </p>
+        <%= link_to "Click to Return to Application", "/applications/#{@application.id}"%>
     <% end %>
